# yandex_algorithms_handbook

./: CMakeLists.txt  README.md  adv_board.cpp  adv_company.cpp  bad_quick_sort.cpp  binary_search.cpp  champion_line.cpp  dominant_element.cpp  exchange.cpp  future_promise.cpp  gifts.cpp  hanoi_tower.cpp  join_element.cpp  king_distrib.cpp  lomuto_partition.cpp  main.cpp  main_future.cpp  max_pay.cpp  miner.cpp  minimal_lenght.cpp  multiply_bin_search.cpp  optimal_exchange.cpp  piar_multi_class.cpp  rocks_game.cpp  segments.cpp  selection_sort.cpp  sign_collect.cpp  spicy.cpp  tennis_tournament.cpp  tst_algo.cpp  tst_uptr.cpp  two_number_sum.cpp
